src/css/credits.css
#credits {
    position: relative;
    background: #031395;
    background-size: 400% 400%;
    animation: bg-gradient 20s ease infinite;
    width: 100%;
    height: 100%;
    padding: 80px 151px;
    align-items: center;
    gap: 8px;
    align-self: stretch;
    
}


/* main container */

#credits .credit-main-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    color: white;
    gap: 32px;
    width: 100%;

}

/* text container and children */

#credits .credits-head-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    align-items: flex-start;
    gap: 24px;
    border-bottom: 2px solid rgba(217, 217, 217, 0.5); /* Color #D9D9D9 with opacity 0.5 */
}

#credits .credits-head-text {
    color: #FFF;
    font-family: "PP Monument";
    font-size: 32px;
}

#credits .credits-WDDP-container {
    display: flex;
    flex-direction: row; /* Display items in a row */
    justify-content: space-between; /* Arrange items with space between them */
    align-items: center; /* Align items vertically centered */
    gap: 8px; /* Adjust the gap between items */
    max-width: 414px; /* Set the maximum width for the container */
    margin: 1 auto; /* Center the container horizontally */
}

#credits .credits-WDDP-text-bold {
    color: #FFF;
    font-family: "GT America";
    font-size: 18px;
    font-weight: 700;
}

#credits .credits-names {
    display: flex;
    flex-direction: column; /* Display names in a column */
    align-items: flex-start; /* Align names to the left */
    gap: 0.5rem; /* Adjust the gap between names */
    color: #FFF;
    font-family: "GT America";
    font-size: 16px;
    font-weight: 400;
}

